@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# manifest v21cc
+# manifest v22
 
 CACHE:
 index.html
